# android-auto-vpn_NDK

./: .gitignore  .travis.yml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cl/niclabs/vpnpassiveping/: ApplicationTest.java  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: auto_vpn
app/src/main/assets/armeabi-v7a/: auto_vpn
app/src/main/assets/x86/: auto_vpn
app/src/main/assets/x86_64/: auto_vpn
app/src/main/cpp/: auto_vpn.cpp  ipnetwork.cpp  ipnetwork.h  native_auto_vpn.cpp  pping.cpp  vpn-lib.c  vpn_connection.h  vpn_jni.c  vpn_jni.cpp
app/src/main/cpp/auto-vpn/: CMakeLists.txt
app/src/main/cpp/vpn-lib/: CMakeLists.txt
app/src/main/java/cl/niclabs/vpnpassiveping/: AutoVpnService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cl/niclabs/vpnpassiveping/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
